buttons getting cut off fixed

--- a/portfolio/public/styles/home.css
+++ b/portfolio/public/styles/home.css
@@ -90,7 +90,7 @@
 /* Cards */
 .card {
     height:600px;
-    width:900px;
+    width:1000px;
     margin: 20px;
     display:flex;
     flex-direction: row;
@@ -122,13 +122,13 @@
 
 .links {
     margin-top: 175px;
-    margin-left: 500px;
+    margin-left: 600px;
     height: 200px;
     width: 200px;
     text-align: center;
     justify-content: center;
     align-items: center;
-    padding-left:40px;
+    /* padding-left:60px; */
 }
 
 img {
